<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_grad"
    tools:context=".ChooseActivity">

    <Button
        android:id="@+id/running_button"
        android:fontFamily="@font/poppins_regular"
        android:layout_width="295dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:text="@string/running"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/biking_button"
        android:textColor="#0A73B8"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/back_button"
        android:fontFamily="@font/poppins_regular"
        android:layout_width="92dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#0A73B8"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rowing_button"
        android:fontFamily="@font/poppins_regular"
        android:layout_width="295dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:text="@string/rowing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/free_weights_button"
        android:textColor="#0A73B8"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/biking_button" />

    <Button
        android:id="@+id/free_weights_button"
        android:fontFamily="@font/poppins_regular"
        android:layout_width="295dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:text="@string/free_weights"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/stair_climbing_button"
        android:textColor="#0A73B8"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/rowing_button" />

    <Button
        android:id="@+id/stair_climbing_button"
        android:layout_width="295dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/stair_climbing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
        android:textColor="#0A73B8"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/free_weights_button" />

    <Button
        android:id="@+id/biking_button"
        android:fontFamily="@font/poppins_regular"
        android:layout_width="295dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:text="@string/biking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rowing_button"
        android:textColor="#0A73B8"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/running_button" />

    <TextView
        android:id="@+id/textView"
        android:fontFamily="@font/poppins_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:gravity="center_horizontal"
        android:text="RECORD EXERCISE"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>