<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_grad"
    android:orientation="vertical">

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_weight="10"
        android:fontFamily="@font/poppins_regular"
        android:text="ToggleButton"
        android:textOff=" Record Workout"
        android:textOn="End Workout" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:layout_weight="50"
        tools:context=".MapsActivity" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="70">

        <TextView
            android:id="@+id/Calories_title"
            android:layout_width="108dp"
            android:layout_height="70dp"
            android:layout_marginTop="28dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:background="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_horizontal"
            android:text="Calories"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.91"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Distance_title"
            android:layout_width="108dp"
            android:layout_height="70dp"
            android:layout_marginTop="28dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:background="@color/white"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center_horizontal"
            android:text="Distance"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.111"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Steps_title"
            android:layout_width="108dp"
            android:layout_height="70dp"
            android:layout_marginTop="136dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:background="@color/white"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center_horizontal"
            android:text="Steps"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.111"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Time_title"
            android:layout_width="108dp"
            android:layout_height="70dp"
            android:layout_marginTop="136dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:background="@color/white"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center_horizontal"
            android:text="Time"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.91"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Distance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/Distance_str"
            android:fontFamily="sans-serif-condensed-light"
            app:layout_constraintBottom_toBottomOf="@+id/Distance_title"
            app:layout_constraintEnd_toEndOf="@+id/Distance_title"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="@+id/Distance_title" />

        <TextView
            android:id="@+id/Calories_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_marginBottom="12dp"
            android:text="@string/Calories_str"
            app:layout_constraintBottom_toBottomOf="@+id/Calories_title"
            app:layout_constraintEnd_toEndOf="@+id/Calories_title"
            app:layout_constraintStart_toStartOf="@+id/Calories_title" />

        <TextView
            android:id="@+id/Steps_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_marginBottom="12dp"
            android:text="@string/Steps_str"
            app:layout_constraintBottom_toBottomOf="@+id/Steps_title"
            app:layout_constraintEnd_toEndOf="@+id/Steps_title"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="@+id/Steps_title" />

        <TextView
            android:id="@+id/Time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_marginBottom="12dp"
            android:text="@string/Time_str"
            app:layout_constraintBottom_toBottomOf="@+id/Time_title"
            app:layout_constraintEnd_toEndOf="@+id/Time_title"
            app:layout_constraintStart_toStartOf="@+id/Time_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:fontFamily="sans-serif-condensed-light"
        android:layout_height="76dp"
        android:layout_weight="5"
        android:gravity="center_horizontal"
        android:text="@string/back" />


</LinearLayout>